Extra Functionalities added
Signed-off-by: Himen Sidhpura <himens72@gmail.com>