@@ -1,7 +1,6 @@
 package com.lab.one;
 
 import java.io.BufferedReader;
-import java.io.BufferedWriter;
 import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.IOException;
@@ -10,22 +9,21 @@ import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
 import java.io.UnsupportedEncodingException;
-import java.net.MalformedURLException;
 import java.net.Socket;
-import java.net.URL;
-import java.net.UnknownHostException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 
 public class httpcLibrary {
 
 	ArrayList<String> headerList = new ArrayList<>();
+	Socket socket;
 
 	String inLineData;
 	String readFile;
 	String generateFile;
 	String input;
 	String url;
-
 	String hostName;
 	String protocolName;
 	String query;
@@ -44,8 +42,6 @@ public class httpcLibrary {
 	boolean generateFileFlag = false;
 	boolean isRedirect = false;
 
-	Socket socket;
-
 	public static final int HTTP_OK = 200;
 	public static final int HTTP_MULT_CHOICE = 300;
 	public static final int HTTP_MOVED_PERM = 301;
@@ -53,6 +49,7 @@ public class httpcLibrary {
 	public static final int HTTP_SEE_OTHER = 303;
 	public static final int HTTP_NOT_MODIFIED = 304;
 	public static final int HTTP_USE_PROXY = 305;
+	public static final String HTTPC = "httpc";
 	public static final String GET_REDIRECT = "getRedirect";
 	public static final String POST_REDIRECT = "postRedirect";
 	public static final String HTTP = "http";
@@ -65,11 +62,9 @@ public class httpcLibrary {
 	public static final String INLINE_DATA_CODE2 = "-d";
 	public static final String READFILE_CODE = "-f";
 	public static final String CREATE_FILE_CODE = "-o";
-
+	public static final String HELP = "help";
 	public static final int HTTP_PORT = 80;
 	public static final int HTTPS_PORT = 443;
-
-	
 
 	public httpcLibrary(String input1) {
 		input = input1;
@@ -84,40 +79,42 @@ public class httpcLibrary {
 				inputList.add(splitInput[i]);
 			}
 		}
-		if (inputList.get(0).equals("httpc") && (inputList.get(1).equals(GET) || inputList.get(1).equals(POST))) {
+		if (inputList.get(0).equals(HTTPC) && (inputList.get(1).equals(HELP))) {
+			printHelp(inputList.get(2));
+		} else if (inputList.get(0).equals(HTTPC) && (inputList.get(1).equals(GET) || inputList.get(1).equals(POST))) {
 			for (int i = 0; i < inputList.size(); i++) {
 				switch (inputList.get(i)) {
-					case VERBOSE_CODE:
-						verboseFlag = true;
-						break;
-	
-					case HEADER_CODE:
-						headerFlag = true;
-						headerList.add(inputList.get(++i));
-						break;
-	
-					case INLINE_DATA_CODE1:
-						inLineDataFlag = true;
-						inLineData = inputList.get(++i);
-						break;
-						
-					case INLINE_DATA_CODE2:
-						inLineDataFlag = true;
-						inLineData = inputList.get(++i);
-						break;
-					
-					case READFILE_CODE:
-						readFileFlag = true;
-						readFile = inputList.get(++i);
-						break;
-					
-					case CREATE_FILE_CODE:
-						generateFileFlag = true;
-						generateFile = inputList.get(++i);
-						break;
-					
-					default:
-						break;
+				case VERBOSE_CODE:
+					verboseFlag = true;
+					break;
+
+				case HEADER_CODE:
+					headerFlag = true;
+					headerList.add(inputList.get(++i));
+					break;
+
+				case INLINE_DATA_CODE1:
+					inLineDataFlag = true;
+					inLineData = inputList.get(++i) + inputList.get(++i);
+					break;
+
+				case INLINE_DATA_CODE2:
+					inLineDataFlag = true;
+					inLineData = inputList.get(++i) + inputList.get(++i);
+					break;
+
+				case READFILE_CODE:
+					readFileFlag = true;
+					readFile = inputList.get(++i);
+					break;
+
+				case CREATE_FILE_CODE:
+					generateFileFlag = true;
+					generateFile = inputList.get(++i);
+					break;
+
+				default:
+					break;
 				}
 				// if (inputList.get(i).equals("-v")) {
 				// verboseFlag = true;
@@ -139,20 +136,23 @@ public class httpcLibrary {
 				// generateFile = inputList.get(++i);
 				// }
 				if (inputList.get(i).startsWith("http://") || inputList.get(i).startsWith("https://")) {
-					url = inputList.get(i);
+					setUrl(inputList.get(i));
 				}
+
 			}
-			if (url != null) {
+			if (getUrl() != null) {
+			//	System.out.println("-----> " + inLineData);
 				getUrlData();
 				if (!(readFileFlag && inLineDataFlag)) {
 					if (inputList.get(1).equals(POST)) {
-						this.postRequest();
+						postRequest();
 					} else if (inputList.get(1).equals(GET)) {
-						if (!(readFileFlag || inLineDataFlag)) {
-							this.getRequest();
-						} else {
-							System.out.println("Invalid Command : In GET Request -f or -d are not allowed ");
-						}
+						getRequest();
+						/*
+						 * if (!(readFileFlag || inLineDataFlag)) { this.getRequest(); } else {
+						 * System.out.
+						 * println("Invalid Command : In GET Request -f or -d are not allowed "); }
+						 */
 					} else {
 						System.out.println("No Post and Get Found in Input");
 					}
@@ -168,24 +168,35 @@ public class httpcLibrary {
 
 	}
 
+	public static void printHelp(String option) {
+		if (option.equals(POST)) {
+			System.out.println(
+					"usage: httpc post [-v] [-h key:value] [-d inline-data] [-f file] URL\nPost executes a HTTP POST request for a given URL with inline data or from file.\n -v Prints the detail of the response such as protocol, status, and headers.\n -h key:value Associates headers to HTTP Request with the format 'key:value'.\n -d string Associates an inline data to the body HTTP POST request. \n -f file Associates the content of a file to the body HTTP POST request.\nEither [-d] or [-f] can be used but not both.");
+
+		} else if (option.equals(GET)) {
+			System.out.println("usage: httpc get [-v] [-h key:value] URL\r\n"
+					+ "Get executes a HTTP GET request for a given URL.\r\n"
+					+ " -v Prints the detail of the response such as protocol, status,\r\n" + "and headers.\r\n"
+					+ " -h key:value Associates headers to HTTP Request with the format\r\n" + "'key:value'.");
+		}
+	}
+
 	private void getUrlData() {
 		try {
-			URL urL = new URL(url);
-			hostName = urL.getHost();
-			protocolName = urL.getProtocol();
-			portNumber = urL.getPort();
-			query = urL.getQuery();
-			urlPath = urL.getPath();
-			fileName = urL.getFile();
-			referenceName = urL.getRef();
-			if (hostName == null || hostName.length() == 0) {
-				hostName = "";
+			URI urL = new URI(getUrl());
+			setHostName(urL.getHost());
+			protocolName = urL.getScheme();
+			setPortNumber(urL.getPort());
+			query = urL.getRawQuery();
+			urlPath = urL.getRawPath();
+			if (getHostName() == null || getHostName().length() == 0) {
+				setHostName("");
 			}
-			if (portNumber == -1) {
+			if (getPortNumber() == -1) {
 				if (protocolName.equals(HTTP)) {
-					portNumber = HTTP_PORT;
+					setPortNumber(HTTP_PORT);
 				} else if (protocolName.equals(HTTPS)) {
-					portNumber = HTTPS_PORT;
+					setPortNumber(HTTPS_PORT);
 				}
 			}
 			if (query == null || query.length() == 0) {
@@ -200,85 +211,112 @@ public class httpcLibrary {
 			if (referenceName == null || referenceName.length() == 0) {
 				referenceName = "";
 			}
-		} catch (MalformedURLException e) {
+		} catch (URISyntaxException e) {
 			e.printStackTrace();
 		}
 	}
 
-	public void postRequest() throws  IOException,UnknownHostException {
-		
-		socket = new Socket(hostName, portNumber);
-		BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(socket.getOutputStream()));
-		String data= "";
-		if (urlPath.length() != 0) {
-			bw.write("POST " + urlPath + " HTTP/1.1\r\n");
-		} else {			
-			bw.write("POST / HTTP/1.1\r\n");
-		}
-		bw.write("Host:" + hostName + "\r\n");
-
-		if(headerFlag && !headerList.isEmpty()) {
-				for (int i = 0; i < headerList.size(); i++) {
-					String[] headerKeyValue = headerList.get(i).split(":");
-					bw.write(headerKeyValue[0] + ":" + headerKeyValue[1]+"\r\n");
-				}
-		}
-		if(inLineDataFlag) {
-			//wr.write("Content-Type: application/json\r\n");
-			bw.write("Content-Length:" + inLineData.length() + "\r\n");
-		}
-		else if(readFileFlag) {
-			FileReader fr = new FileReader(readFile);
-			BufferedReader reader = new BufferedReader(fr);
-			String sCurrentLine;
-			while ((sCurrentLine = reader.readLine()) != null) {
-				data = data + sCurrentLine;
+	public static String generateMethodURL(String method, String tempURL, String type) {
+		if (method.equals("POST")) {
+			if (tempURL.length() != 0) {
+				return "POST " + tempURL + " HTTP/1.1\r\n";
+				// writer.write("POST " + urlPath + " HTTP/1.1\r\n");
+			} else {
+				return "POST / HTTP/1.1\r\n";
+				// writer.write("POST / HTTP/1.1\r\n");
 			}
-			bw.write("Content-Length:" + data.length() + "\r\n");
-//			bw.write(data);
+		} else if (method.equals("GET")) {
+			if (tempURL.length() == 0) {
+				// writer.println("GET / /1.1");
+				return "GET / /1.1";
+			} else {
+				return "GET " + tempURL + " HTTP/1.1";
+				// writer.println("GET " + urlPath + " HTTP/1.1");
+			}
 		}
+		return "";
+	}
 
-		bw.write("\r\n");
+	public void postRequest() throws IOException {
+
+		socket = new Socket(getHostName(), getPortNumber());
+		StringBuilder data = new StringBuilder();
+		PrintWriter writer = new PrintWriter(new OutputStreamWriter(socket.getOutputStream()), true);
+		if (urlPath.length() != 0) {
+			writer.write(generateMethodURL("POST", urlPath, " HTTP/1.1\r\n"));
+			/// writer.write("POST " + urlPath + " HTTP/1.1\r\n");
+		} else {
+			writer.write(generateMethodURL("POST", "", " HTTP/1.1\r\n"));
+			// writer.write("POST / HTTP/1.1\r\n");
+		}
+		writer.write("Host:" + getHostName() + "\r\n");
+
+		if (headerFlag && !headerList.isEmpty()) {
+			for (int i = 0; i < headerList.size(); i++) {
+				String[] headerKeyValue = headerList.get(i).split(":");
+				writer.write(headerKeyValue[0] + ":" + headerKeyValue[1] + "\r\n");
+			}
+		}
+		if (inLineDataFlag) {
+			data.append(inLineData);
+			// writer.write("Content-Length:" + inLineData.length() + "\r\n");
+		} else if (readFileFlag) {
+			BufferedReader reader = new BufferedReader(new FileReader(readFile));
+			String line;
+			while ((line = reader.readLine()) != null) {
+				data.append(line);
+			}
+			reader.close();
+			//
+		}
+		writer.write("Content-Length:" + data.length() + "\r\n");
+		writer.write("\r\n");
 		if (inLineData != null) {
 			inLineData = inLineData.replace("\'", "");
-			bw.write(inLineData);
-			bw.write("\r\n");
+			writer.write(inLineData);
+			writer.write("\r\n");
 		}
-		if (data != null) {
-			bw.write(data);
-			bw.write("\r\n");
+		if (data.toString().trim().length() >= 1) {
+			writer.write(data.toString());
+			writer.write("\r\n");
 		}
-		bw.flush();
-		this.printToConsole();
-		bw.close();
-		this.isRedirect("postRedirect");			
+		writer.flush();
+		displayOutput();
+		writer.close();
+		isRedirect(POST_REDIRECT);
 	}
 
-	public void getRequest() throws  IOException {
-		socket = new Socket(hostName, portNumber);
-		PrintWriter writer = new PrintWriter(socket.getOutputStream(), true);
-		if (urlPath.length() == 0) {
-			writer.println("GET / 	/1.1");
-		} else {
-			writer.println("GET " + urlPath + " HTTP/1.1");
-		}
-		writer.println("Host:" + hostName);
-		if (!headerList.isEmpty()) {
-			for (int i = 0; i < headerList.size(); i++) {
-				if (headerFlag) {
-					String[] headerKeyValue = headerList.get(i).split(":");
-					writer.println(headerKeyValue[0] + ":" + headerKeyValue[1]);
+	public void getRequest() throws IOException {
+		if (!(readFileFlag || inLineDataFlag)) {
+			socket = new Socket(getHostName(), getPortNumber());
+			PrintWriter writer = new PrintWriter(socket.getOutputStream(), true);
+			if (urlPath.length() == 0) {
+				// writer.println("GET / /1.1");
+				writer.println(generateMethodURL("GET", "", ""));
+			} else {
+				writer.println(generateMethodURL("GET", urlPath, ""));
+				// writer.println("GET " + urlPath + " HTTP/1.1");
+			}
+			writer.println("Host:" + getHostName());
+			if (!headerList.isEmpty()) {
+				for (int i = 0; i < headerList.size(); i++) {
+					if (headerFlag) {
+						String[] headerKeyValue = headerList.get(i).split(":");
+						writer.println(headerKeyValue[0] + ":" + headerKeyValue[1]);
+					}
 				}
 			}
+			writer.println("\r\n");
+			writer.flush();
+			displayOutput();
+			writer.close();
+			isRedirect(GET_REDIRECT);
+		} else {
+			System.out.println("Invalid Command : In GET Request -f or -d are not allowed ");
 		}
-		writer.println("\r\n");
-		writer.flush();
-		printToConsole();
-		writer.close();
-		isRedirect(GET_REDIRECT);
 	}
 
-	public void printToConsole() throws IOException {
+	public void displayOutput() throws IOException {
 
 		InputStream inputStream = socket.getInputStream();
 		BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream));
@@ -305,28 +343,79 @@ public class httpcLibrary {
 		String[] splitReceiveContent = receiveContent.toString().split("Content Separated");
 		String[] responseHeader = splitReceiveContent[0].split("Entry Separated");
 		String[] responseBody = splitReceiveContent[1].split("Entry Separated");
-		System.out.println("Header " + splitReceiveContent[0]);
-		System.out.println("Body " + splitReceiveContent[1]);
-
-		// code for redirect
-		statusCode = Integer.parseInt(responseHeader[0].substring(9, 12));
-		System.out.println("Status Code" + statusCode);
+		// System.out.println("Header " + splitReceiveContent[0]);
+		// System.out.println("Body " + splitReceiveContent[1]);
+		setStatusCode(Integer.parseInt(responseHeader[0].substring(9, 12)));
+		// System.out.println("Status Code" + getStatusCode());
 		for (int i = 0; i < responseHeader.length; i++) {
 			if (responseHeader[i].startsWith("Location:")) {
-				newURL = responseHeader[i].substring(10);
+				setNewURL(responseHeader[i].substring(10));
 			}
 		}
-		// end of code for redirect
-
 		// For Verbose
 		isVerbose(verboseFlag, responseHeader);
+		printOutput(responseBody);
+		isGenerateFile(generateFileFlag, responseHeader, responseBody);
 
-		for (int i = 0; i < responseBody.length; i++) {
-			System.out.println(responseBody[i]);
+	}
+
+	public void isRedirect(String requestRedirect) {
+		if (getStatusCode() != HTTP_OK && (getStatusCode() == HTTP_MOVED_TEMP || getStatusCode() == HTTP_MOVED_PERM
+				|| getStatusCode() == HTTP_SEE_OTHER)) {
+			isRedirect = true;
+			try {
+				isRedirect = false;
+				System.out.println("");
+				Thread.sleep(1000);
+				System.out.println("Status Code :" + getStatusCode());
+				Thread.sleep(1000);
+				System.out.print("Connecting to:" + getNewURL());
+				Thread.sleep(2000);
+				System.out.println("Please Wait.......");
+				/*
+				 * for (int k = 0; k < 4; k++) { Thread.sleep(500); System.out.print("."); }
+				 */
+				setUrl(newURL);
+				getUrlData();
+				if (requestRedirect.equals(GET_REDIRECT)) {
+					getRequest();
+				} else if (requestRedirect.equals(POST_REDIRECT)) {
+					postRequest();
+				}
+				System.out.println("Validated : Redirection");
+			} catch (IOException e) {
+				e.printStackTrace();
+			} catch (InterruptedException e) {
+				e.printStackTrace();
+			}
 		}
 
-		if (generateFileFlag) {
-			generateFile(responseHeader, responseBody);
+	}
+
+	public void isGenerateFile(boolean flag, String[] headers, String[] messagebody) {
+		if (flag) {
+			PrintWriter writer;
+			if (generateFile != null) {
+				try {
+					writer = new PrintWriter(generateFile, "UTF-8");
+					writer.println("Command: " + input + "\r\n");
+					if (verboseFlag) {
+						printOutputInFile(writer, headers);
+						/*
+						 * for (int i = 0; i < headers.length; i++) { writer.println(headers[i]); }
+						 */
+					}
+					writer.println("");
+					printOutputInFile(writer, messagebody);
+					/*
+					 * for (int i = 0; i < messagebody.length; i++) {
+					 * writer.println(messagebody[i]); }
+					 */
+					writer.close();
+				} catch (FileNotFoundException | UnsupportedEncodingException e) {
+					e.printStackTrace();
+				}
+			}
 		}
 	}
 
@@ -335,71 +424,62 @@ public class httpcLibrary {
 	 * Not. If verbose used, Prints the detail of the response such as protocol,
 	 * status, and headers.
 	 */
-	public static void isVerbose(boolean tempFlag, String[] responseHeader) {
-		if (tempFlag) {
-			for (int i = 0; i < responseHeader.length; i++) {
-				System.out.println(responseHeader[i]);
-			}
-			System.out.println("");
+	public static void isVerbose(boolean flag, String[] responseHeader) {
+		if (flag) {
+			printOutput(responseHeader);
 		}
 	}
 
-	public void isRedirect(String requestRedirect) {
-		if (statusCode != HTTP_OK
-				&& (statusCode == HTTP_MOVED_TEMP || statusCode == HTTP_MOVED_PERM || statusCode == HTTP_SEE_OTHER)) {
-			isRedirect = true;
+	public static void printOutput(String[] message) {
+		for (int i = 0; i < message.length; i++) {
+			System.out.println(message[i]);
 		}
-		if (isRedirect) {
-			try {
-				isRedirect = false;
-				System.out.println("");
-				Thread.sleep(1000);
-				System.out.println("Status Code :" + statusCode);
-				Thread.sleep(1000);
-				System.out.print("Connecting to:" + newURL);
-				for (int k = 0; k < 4; k++) {
-					Thread.sleep(500);
-					System.out.print(".");
-				}
-				System.out.println("");
-				url = newURL;
-				getUrlData();
-				if (requestRedirect.equals(GET_REDIRECT)) {
-					getRequest();
-				} else if (requestRedirect.equals(POST_REDIRECT)) {
-					postRequest();
-				}
-				System.out.println("Valided : Redirection");
-			} catch (InterruptedException e) {
-				e.printStackTrace();
-			} catch (UnknownHostException e) {
-				System.out.println("Server not found: " + e.getMessage());
-			} catch (IOException e) {
-				e.printStackTrace();
-			}
+		System.out.println("");
+	}
+
+	public static void printOutputInFile(PrintWriter writer, String[] message) {
+		for (int i = 0; i < message.length; i++) {
+			writer.println(message[i]);
 		}
 	}
 
-	public void generateFile(String[] headers, String[] messagebody) {
-		PrintWriter writer;
-		if (generateFile != null) {
-			try {
-				writer = new PrintWriter(generateFile, "UTF-8");
-				writer.println("Command: " + input + "\r\n");
-				if (verboseFlag) {
-					for (int i = 0; i < headers.length; i++) {
-						writer.println(headers[i]);
-					}
-				}
-				writer.println("");
-				for (int i = 0; i < messagebody.length; i++) {
-					writer.println(messagebody[i]);
-				}
-				writer.close();
-			} catch (FileNotFoundException | UnsupportedEncodingException e) {
-				e.printStackTrace();
-			}
-		}
+	public String getUrl() {
+		return url;
 	}
 
+	public void setUrl(String url) {
+		this.url = url;
+	}
+
+	public String getNewURL() {
+		return newURL;
+	}
+
+	public void setNewURL(String newURL) {
+		this.newURL = newURL;
+	}
+
+	public int getStatusCode() {
+		return statusCode;
+	}
+
+	public void setStatusCode(int statusCode) {
+		this.statusCode = statusCode;
+	}
+
+	public String getHostName() {
+		return hostName;
+	}
+
+	public void setHostName(String hostName) {
+		this.hostName = hostName;
+	}
+
+	public int getPortNumber() {
+		return portNumber;
+	}
+
+	public void setPortNumber(int portNumber) {
+		this.portNumber = portNumber;
+	}
 }
